# planfix-ajax-api

./: .dockerignore  .flake8  Dockerfile  README.md  README.ru.md  docker-compose.yml  pyproject.toml  run.py
app/: service.py
app/application/: client_service.py
app/config/: service.py
app/domain/: client.py  credentials.py  repositories.py
app/infrastructure/browser/: browser_session.py  session.py
app/infrastructure/persistence/: client_repository.py
app/infrastructure/planfix/: http_publisher.py  query_executor.py
app/interface/: openapi.yaml
app/interface/http/: server.py  view.py
app/utils/: service_state.py  types.py
